# rtrace

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  DISTRIBUTION.md  Makefile  README.md  dev.sh  install.sh  pyproject.toml  requirements.txt
.github/workflows/: build-bundles.yml  ci.yml
_docker/: Dockerfile  build.sh
docs/: packaging.md
packaging/: build-bundle.sh  build-native.sh
src/: CMakeLists.txt  build.sh  rtrace.cc  rtrace_util.cc  rtrace_util.h  types.h
src/python/: boundary_detection.py  disassembler.py  function_call.py  library.py  main.py  postprocess.py  preprocess.py  process.py
src/rtrace/: boundary_detection.py  disassembler.py  edition.py  function_call.py  library.py  main.py  paths.py  postprocess.py  preprocess.py  process.py  utils.py
tests/: test_function_call.py  test_library.py  test_postprocess.py  test_process.py
